# musicat

./: .editorconfig  .gitignore  .gitmodules  .typesafe-i18n.json  CHANGELOG.md  PKGBUILD  README.md  RELEASE-NOTES.md  index.html  mdsvex.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  svelte.config.js  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml  main.yml  publish.yml
base16/builder/: package-lock.json  package.json
base16/builder/patches/: yaml+1.10.2.patch
base16/builder/src/: index.ts
base16/schemes/: mocha.yaml  nord-light.yaml  nord.yaml
src/: .prettierrc  App.d.ts  App.svelte  AudioResamplerWorker.ts  AudioSourceWorker.ts  ImportWorker.ts  RingBufAudioSourceWorker.ts  WebRTCSourceWorker.ts  app.css  main.ts  vite-env.d.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/lib/: build.sh
src-tauri/lib/libflac/: Cargo.toml
src-tauri/lib/libflac-sys/: Cargo.toml  build.rs
src-tauri/lib/libflac-sys/src/: lib.rs
src-tauri/lib/libflac/src/: error.rs  lib.rs
src-tauri/lib/pvr/: Cargo.toml
src-tauri/lib/pvr-core/: Cargo.toml
src-tauri/lib/pvr-core/src/: config.rs  lib.rs  utils.rs
src-tauri/lib/pvr-core/src/model/: mod.rs
src-tauri/lib/pvr-core/src/model/mdx/: config.rs  mod.rs  preset.rs  stft.rs
src-tauri/lib/pvr/src/: cli.rs  lib.rs  main.rs  setup.rs  util.rs
src-tauri/resources/: log4rs.dev.yml  log4rs.release.yml
src-tauri/src/: beets.rs  constants.rs  decoder.rs  dsp.rs  equalizer.rs  file_chunk_streamer.rs  files.rs  lib.rs  logger.rs  main.rs  mediakeys.rs  metadata.rs  output.rs  player.rs  resampler.rs  scrape.rs  stem_separator.rs  store.rs  tests.rs  updater.rs  webrtc_streamer.rs  window.rs
src-tauri/src/mediakeys/: mod.rs
src-tauri/src/metadata/: artwork_cacher.rs
src/data/: ArtistsToolkitData.ts  Cacher.ts  FolderWatcher.ts  InternetArchiveAPI.ts  LabelMap.ts  LibraryEnrichers.ts  LibraryImporter.ts  LibraryUtils.ts  LyricsGrabber.ts  M3UUtils.ts  PlaylistUtils.ts  SmartQueries.ts  WikipediaAPI.ts  beets.ts  countries.json  countries.md  db.ts  store.ts  storeHelper.ts  storeUtils.ts
src/i18n/: formatters.ts  i18n-svelte.ts  i18n-types.ts  i18n-util.async.ts  i18n-util.sync.ts  i18n-util.ts
src/i18n/cn/: index.ts
src/i18n/en/: index.ts
src/i18n/es/: index.ts
src/i18n/tr/: index.ts
src/lib/: AlbumItem.svelte  AlbumMenu.svelte  Albums.svelte  AudioPlayer.ts  ColumnPicker.svelte  Dropzone.svelte  ImportPlaceholder.svelte  InfoPopup.svelte  Input.svelte  Library.svelte  ReleaseNotes.svelte  Seekbar.svelte  SettingsPopup.svelte  Sidebar.svelte  SpectrumAnalyzer.svelte  TrackInfoPopup.svelte  TrackMenu.svelte  string.extensions.ts  tippy.css
src/lib/albums/: AlbumDetails.svelte  AlbumItem.svelte  AlbumMenu.svelte  AlbumOptions.svelte  AlbumsHeader.svelte  AltAlbumMenu.svelte  util.ts
src/lib/analytics/: AlbumsTimeline.svelte  GenreMap.svelte  LibrarySummary.svelte
src/lib/data/: CountryCodes.ts  LibraryEnrichers.ts
src/lib/info/: ArtworkTab.svelte  CountrySection.svelte  FileTab.svelte  MetadataSection.svelte  TrackInfoPopup.svelte
src/lib/internet-archive/: DownloadPopup.svelte  IAFileBlock.svelte  IAItemPlayer.svelte
src/lib/lastfm/: LastFmClient.ts
src/lib/map/: FakeGlowMaterial.js  Globe.svelte  MapTooltip.svelte
src/lib/menu/: Menu.svelte  MenuDivider.svelte  MenuInput.svelte  MenuOption.svelte  file.ts  search.ts
src/lib/nav/: TopNav.svelte
src/lib/player/: AudioAnalyzer.svelte  AudioPlayer.ts  AudioVisualiser.ts  Equalizer.svelte  EqualizerPresets.ts  FileStreamSource.ts  Oscilloscope.svelte  RegionsPlugin.ts  SpectrumAnalyzer.svelte  StreamDebugger.svelte  Waveform.svelte  WebAudioPlayer.ts  WebAudioVisualiser.ts  WebRTCReceiver.ts  ringbuf.ts
src/lib/queue/: QueueMenu.svelte  ToolsMenu.svelte  TrackMenu.svelte
src/lib/settings/: InfoPopup.svelte  PathSetting.svelte  ReleaseNotes.svelte  SettingsPopup.svelte  UpdaterOverlay.svelte
src/lib/sidebar/: Seekbar.svelte  Sidebar.svelte
src/lib/smart-query/: Query.ts  QueryPart.ts  QueryParts.ts  SmartQueryBuilder.svelte  SmartQueryMainHeader.svelte  SmartQueryPart.svelte  SmartQueryResultsPlaceholder.svelte  UserQueryPart.ts
src/lib/ui/: AlbumsTimeline.svelte  AnimatedHeight.ts  ButtonWithIcon.svelte  CompressionSelector.svelte  ContextMenu.ts  CursorInfo.svelte  Divider.svelte  Dropdown.svelte  EQSlider.svelte  Icon.svelte  Input.svelte  InputDropdown.svelte  KeySelector.svelte  Knob.svelte  LoadingSpinner.svelte  Noise.svelte  PlaybackSpeed.svelte  Portal.ts  ProgressBar.svelte  ScrollTo.svelte  Scrollbar.svelte  ShadowGradient.svelte  Tabs.svelte  Theme.ts  TippyAction.ts  Toggle.svelte  ToggleButton.svelte  VolumeSlider.svelte
src/lib/views/: AlbumsView.svelte  AnalyticsView.svelte  ArtistsToolkitView.svelte  CanvasLibraryView.svelte  InternetArchiveView.svelte  LibraryView.svelte  MapView.svelte  NotesView.svelte  PrunePopup.svelte  QueueOptions.svelte  QueueView.svelte  TopBar.svelte  WelcomeView.svelte  WikiView.svelte
src/lib/visualiser/: AudioVisualiser.ts
src/lib/your-music/: ArtistInfo.svelte  ContentBlock.svelte  ContentDropzone.svelte  FileBlock.svelte  LinkBlock.svelte  LyricsBlock.svelte  LyricsTab.svelte  Music.svelte  MusicTab.svelte  OtherTab.svelte  Scrapbook.svelte  SongDetails.svelte  SongProjects.svelte  TagCloud.svelte  YourArtists.svelte
src/styles/: _mixins.scss
src/theming/: ColorUtils.ts  ThemeWrapper.svelte  css.ts  isObject.ts  processConfig.ts  store.ts  theme.schema.json  themes.ts
src/theming/themes/: amphibian.yaml  apple-music-dark.yaml  apple-music-light.yaml  (+12 more)
src/types/: module.theme.d.ts  theme.d.ts
src/utils/: ActiveElementUtils.ts  ArrayUtils.ts  AutoWidth.ts  ClickOutside.ts  DSPUtils.ts  DateUtils.ts  EmojiUtils.ts  EncodingUtils.ts  FileUtils.ts  FocusTrap.ts  GeoUtils.ts  Logger.ts  PasteAction.ts  URLMetadata.ts
src/window/: EventListener.ts
(+19 files in other folders)
