[package]
name = "app"
version = "0.10.0"
description = "Musicat music player"
authors = ["you"]
license = "GPL-3.0-or-later"
repository = "https://github.com/basharovV/musicat"
default-run = "app"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.6", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [ 
    "macos-private-api",
    "protocol-asset"
] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lofty = { version = "0.21.1" }
base64 = "0.22.1"
filetime = "0.2.25"
chksum-md5 = "0.0.0"
rayon = "1.10.0"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.20"
http = "1.1.0"
http-range = "0.1.5"
tauri-utils = "2.0.0-rc.6"
percent-encoding = "2.3.1"
symphonia = { version = "0.5.4", features = ["mp3", "flac", "opt-simd"] }
webrtc = { git = "https://github.com/basharovV/webrtc.git" }
crc = { version = "3.2.1" }
log = "0.4.22"
bytes = "1.7.2"
tokio-util = "0.7.12"
ringbuffer = "0.15.0"
atomic-wait = "1.1.0"
cpal = { version = "0.15.3", default-features = false, features = ["oboe-shared-stdcxx"] }
rb = "0.4.1"
rubato = "0.16.0"
arrayvec = "0.7.6"
env_logger = "0.10.2"
rustfft = "6.2.0"
tauri-plugin-window-state = { version = "2.0.0-beta.0" }
anyhow = "1.0.90"
futures-util = "0.3.31"
tempfile = "3.13.0"
color-print = "0.3.6"
tauri-plugin-fs = { version = "2.0.0-beta.0", features = ["watch"] }
tauri-plugin-os = "2.0.0-beta.0"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2.0.0-beta.0"
tauri-plugin-http = "2.0.0-beta.0"
tauri-plugin-log = "2.0.0-beta.0"
url = "2.5.2"
log4rs = "1.3.0"
urlencoding = "2.1.3"

[target.'cfg(not(target_os = "android"))'.dependencies]
trash = "5.1.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
block2 = "0.5.1"
objc2-foundation = { version = "0.2.2", features = ["all"] }
window-vibrancy = "0.5.2"

[patch.crates-io]
webrtc = { git = "https://github.com/basharovV/webrtc.git" }
webrtc-ice = { git = "https://github.com/basharovV/webrtc.git" }
webrtc-sctp = { git = "https://github.com/basharovV/webrtc.git" }
tao = { git = "https://github.com/basharovV/tao.git", branch = "dev"}
# tao = { path = "../../tao"}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.0.0-beta.0"
