
[package]
name = "Musicat"
version = "0.13.1"
description = "Musicat music player"
authors = ["you"]
license = "GPL-3.0-or-later"
repository = "https://github.com/basharovV/musicat"
default-run = "Musicat"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.6.0", features = ["macos-private-api", "protocol-asset"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lofty = "0.22.4"
base64 = "0.22.1"
filetime = "0.2.25"
chksum-md5 = "0.0.0"
rayon = "1.10.0"
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.20"
http = "1.1.0"
http-range = "0.1.5"
tauri-utils = "2.6.0"
percent-encoding = "2.3.1"
symphonia = { version = "0.5.4", features = ["aac", "flac", "isomp4", "mp3", "opt-simd"] }
webrtc = "0.14.0"
crc = { version = "3.2.1" }
log = "0.4.22"
bytes = "1.7.2"
tokio-util = "0.7.12"
ringbuffer = "0.15.0"
atomic-wait = "1.1.0"
cpal = "0.15.3"
rb = "0.4.1"
rubato = "0.16.0"
arrayvec = "0.7.6"
env_logger = "0.10.2"
rustfft = "6.2.0"
tauri-plugin-window-state = { version = "2.4.0" }
anyhow = "1.0.90"
futures-util = "0.3.31"
tempfile = "3.13.0"
color-print = "0.3.6"
tauri-plugin-fs = { version = "2.4.1", features = ["watch"] }
tauri-plugin-os = "2.3.0"
tauri-plugin-dialog = "2.3.2"
tauri-plugin-shell = "2.3.0"
tauri-plugin-http = "2.5.1"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-opener = "2"
url = "2.5.2"
log4rs = "1.3.0"

# Only for when running PVR in lib mode instead of sidecar
# tracing = "0.1"                 # tracing macros
# tracing-log = "0.2"             # bridge tracing -> log
# tracing-subscriber = "0.3"      # subscriber for global tracing
# pvr = { path = "../../portable-vocal-remover" }

urlencoding = "2.1.3"
trash = "5.1.1"
kuchiki = "0.8"
file-id = "0.2.1"
zune-jpeg = "0.4.14"
zune-png = "0.4.10"
serde_repr = "0.1.19"
serde-m3u = "0.1.0"
mimetype = "0.1.6"
serde_bytes = "0.11.17"
memmap2 = "0.9.7"
strum = "0.27.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
block2 = "0.5.1"
objc2-foundation = { version = "0.2.2", features = ["all"] }
window-vibrancy = "0.5.2"

[patch.crates-io]
tao = { git = "https://github.com/basharovV/tao.git", branch = "dev" }
# tao = { path = "../../tao"}


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.2"
